--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
       flex: 1;
       padding: 10px;
     }
-    h1 {
+    h1, h2, h3 {
       font-size: 20px;
+      margin-bottom: 10px;
     }
     a {
       display: block;
       margin-bottom: 8px;
+      text-decoration: none;
+      color: #007acc;
+    }
+    ul {
+      padding-left: 18px;
+    }
+    li {
+      margin-bottom: 6px;
     }
   </style>
 </head>
@@ -42,7 +51,7 @@
     <h2>薛法藍</h2>
     <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
     <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
-    <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">🔗 ORCID Profile</a>
+    <a href="https://orcid.org/0009-0004-5699-9236" target="_blank">🔗 ORCID Profile</a>
   </div>
 
   <div class="main">
@@ -53,13 +62,4 @@
     <div class="column">
       <h3>Selected Articles</h3>
       <ul>
-        <li><a href="#">Title of Article 1</a></li>
-        <li><a href="#">Title of Article 2</a></li>
-        <li><a href="#">Title of Article 3</a></li>
-        <!-- Add more articles as needed -->
-      </ul>
-    </div>
-  </div>
-
-</body>
-</html>
+        <li><a href="https://doi.org/10.1075/target.20165.che" target="_blank">Don’t forget to close the light: ERP evidence for the facilitation of typical_
