--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
       padding: 20px;
       flex-grow: 1;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
     }
     .column {
-      flex: 1;
       padding: 10px;
     }
     h1, h2, h3 {
@@ -57,13 +56,12 @@
   <div class="main">
     <div class="column">
       <h3>Biography</h3>
-      <p>Jean-François Petit de Chemellier is a Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
+      <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
     </div>
     <div class="column">
-      <h3>Selected Articles</h3>
+      <h3>Publications</h3>
       <ul>
         <li><a href="https://doi.org/10.1075/target.20165.che" target="_blank">Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a></li>
-      </ul>
     </div>
   </div>
 
