--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="column">
       <h3>Publications</h3>
       <ul>
-        <li><a href="https://doi.org/10.1075/target.20165.che" target="_blank">Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a></li>
+        <li><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a></li>
     </div>
   </div>
 
