--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
       <h3>Biography</h3>
       <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
     </div>
-    <div class="column">
-      <h3>Publications</h3>
-      <ul>
-        <li><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a></li>
+
+<div class="publications">
+  <h3>Publications</h3>
+  <div class="publication-item">
+    <img src="images/target-journal-cover.jpg" alt="Target Journal Cover" class="journal-cover">
+    <div class="publication-details">
+      <p><strong>Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
+      <p><em>Target: International Journal of Translation Studies</em>, 2021</p>
+      <p><a href="https://doi.org/10.1075/target.20165.che" target="_blank">Read Article</a></p>
     </div>
   </div>
-
-</body>
-</html>
+</div>
