--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="publication-details">
       <p><strong>Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
       <p><em>Target: International Journal of Translation Studies</em>, 2021</p>
-      <p><a href="https://doi.org/10.1075/target.20165.che" target="_blank">Read Article</a></p>
+      <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
     </div>
   </div>
 </div>
