--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="images/target-journal-cover.jpg" alt="Target Journal Cover" class="journal-cover">
     <div class="publication-details">
       <p><strong>Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
-      <p><em>Target: International Journal of Translation Studies</em>, 2021</p>
+      <p><em>Target: Bilingualism: Language & Cognition</em>, 2021</p>
       <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
     </div>
   </div>
