--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h3>Publications</h3>
   <div class="publication-item">
     <img src="images/blc-cover.jpg" alt="Target Journal Cover" class="journal-cover">
-      <p><strong>Don’t forget to close the light: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
+      <p><strong>'Don’t forget to close the light': ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
       <p><em>Bilingualism: Language & Cognition</em>, 2025</p>
       <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
     </div>
