--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
     .column {
       padding: 10px;
     }
+    .publications {
+      padding: 10px;
+    }
+    .publication-item {
+      display: flex;
+      align-items: flex-start;
+      gap: 15px;
+      margin-bottom: 20px;
+    }
+    .journal-cover {
+      width: 100px;
+      height: auto;
+      border: 1px solid #ccc;
+    }
     h1, h2, h3 {
       font-size: 20px;
       margin-bottom: 10px;
@@ -59,13 +73,18 @@
       <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
     </div>
 
-<div class="publications">
-  <h3>Publications</h3>
-  <div class="publication-item">
-    <img src="images/blc-cover.jpg" alt="Target Journal Cover" class="journal-cover">
-      <p><strong>'Don’t forget to close the light': ERP evidence for the facilitation of typical translation equivalents in bilingual processing</strong></p>
-      <p><em>Bilingualism: Language & Cognition</em>, 2025</p>
-      <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
+    <div class="publications">
+      <h3>Publications</h3>
+      <div class="publication-item">
+        <img src="images/blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
+        <div>
+          <p><strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong> ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.</p>
+          <p><em>Bilingualism: Language and Cognition</em>, 1–13.</p>
+          <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+
+</body>
+</html>
