--- a/index.html
+++ b/index.html
@@ -72,19 +72,25 @@
       <h3>Biography</h3>
       <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
     </div>
-
-    <div class="publications">
-      <h3>Publications</h3>
-      <div class="publication-item">
-        <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
-        <div>
-          <p><strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong> ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.</p>
-          <p><em>Bilingualism: Language and Cognition</em>, 1–13.</p>
-          <p><a href="https://doi.org/10.1017/S1366728925000227" target="_blank">Read Article</a></p>
-        </div>
-      </div>
+  
+<div class="publications">
+  <h3>Publications</h3>
+  <div class="publication-item">
+    <img src="images/blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
+    <div>
+      <p>
+        <strong>
+          <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+            Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+          </a>
+        </strong>
+      </p>
+      <p><em>Bilingualism: Language and Cognition</em>, 1–13.</p>
     </div>
   </div>
+</div>
 
 </body>
 </html>
+
+
