--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="publications">
   <h3>Publications</h3>
   <div class="publication-item">
-    <img src="images/blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
+    <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
     <div>
       <p>
         <strong>
