--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
     <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
     <div>
       <p>
-        <strong>
-          <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-            Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
-          </a>
-        </strong>
+        <strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong>
+        <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+          ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+        </a>
+        <em>Bilingualism: Language and Cognition</em>, 1–13.
       </p>
-      <p><em>Bilingualism: Language and Cognition</em>, 1–13.</p>
     </div>
   </div>
 </div>
