--- a/index.html
+++ b/index.html
@@ -73,19 +73,16 @@
       <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
     </div>
   
-<div class="publications">
-  <h3>Publications</h3>
-  <div class="publication-item">
-    <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
-    <div>
-      <p>
-        <strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong>
-        <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-          ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
-        </a>
-        <em>Bilingualism: Language and Cognition</em>, 1–13.
-      </p>
-    </div>
+<div class="publication-item">
+  <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
+  <div>
+    <p>
+      <strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong>
+      <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+        ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+      </a>
+      Bilingualism: Language and Cognition, 1–13. doi:<a href="https://doi.org/10.1017/S1366728925000227" target="_blank">10.1017/S1366728925000227</a>
+    </p>
   </div>
 </div>
 
