--- a/index.html
+++ b/index.html
@@ -77,11 +77,10 @@
   <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
   <div>
     <p>
-      <strong>Petit de Chemellier, J.-F., & Chan, S. (2025).</strong>
       <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
         ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
-      </a>
-      Bilingualism: Language and Cognition, 1–13. doi:<a href="https://doi.org/10.1017/S1366728925000227" target="_blank">10.1017/S1366728925000227</a>
+      </a>    
+Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. Bilingualism: Language and Cognition, 1–13. doi:10.1017/S1366728925000227</a>
     </p>
   </div>
 </div>
