--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       padding: 0;
       display: flex;
       min-height: 100vh;
+      background-color: #f9f9f9;
     }
     .sidebar {
       background-color: #f0f0f0;
       padding: 20px;
       width: 250px;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     }
     .main {
       padding: 20px;
@@ -27,17 +29,23 @@
     }
     .publications {
       padding: 10px;
+      margin-top: 20px;
     }
     .publication-item {
       display: flex;
       align-items: flex-start;
       gap: 15px;
       margin-bottom: 20px;
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     .journal-cover {
       width: 100px;
       height: auto;
       border: 1px solid #ccc;
+      border-radius: 4px;
     }
     h1, h2, h3 {
       font-size: 20px;
@@ -70,22 +78,26 @@
   <div class="main">
     <div class="column">
       <h3>Biography</h3>
-      <p>Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.</p>
+      <p>
+        Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.
+      </p>
     </div>
-  
-<div class="publication-item">
-  <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover">
-  <div>
-    <p>
-      <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-        ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
-      </a>    
-Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. Bilingualism: Language and Cognition, 1–13. doi:10.1017/S1366728925000227</a>
-    </p>
+    
+    <div class="publications">
+      <div class="publication-item">
+        <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover" />
+        <div>
+          <p>
+            <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+            </a><br />
+            Petit de Chemellier, J.-F., & Chan, S. (2025). Bilingualism: Language and Cognition, 1–13. doi:10.1017/S1366728925000227
+          </p>
+        </div>
+      </div>
+      <!-- Additional publications can be added here following the same structure -->
+    </div>
   </div>
-</div>
 
 </body>
 </html>
-
-
