--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div>
           <p>
             <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
             </a><br />
             Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>em>, 1–13. doi:10.1017/S1366728925000227
           </p>
