--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
           </p>
         </div>
       </div>
+
+      <div class="publication-item">
+        <img src="sti-cover.jpg" alt="Studies of Interpretation and Translation Cover" class="journal-cover" />
+        <div>
+          <p>
+            <a href="https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92" target="_blank">
+              Professional Translator and Interpreter Training in France: Specificities and Challenges.
+            </a><br />
+            Petit de Chemellier, J.-F. (2019). <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
+            <br />https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
