--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Jean-François Petit de Chemellier (薛法藍)</title>
+  <title>Jean-François
+  Petit de Chemellier (薛法藍)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
