--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.
       </p>
     </div>
+
+      <h3>Publications</h3>
     
     <div class="publications">
       <div class="publication-item">
