--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         <div>
           <p>
             <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing.
+              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
             </a><br />
-            Petit de Chemellier, J.-F., & Chan, S. (2025). <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
+            Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
           </p>
         </div>
       </div>
@@ -158,9 +158,9 @@
         <div>
           <p>
             <a href="https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92" target="_blank">
-              Professional Translator and Interpreter Training in France: Specificities and Challenges.
+              Professional Translator and Interpreter Training in France: Specificities and Challenges
             </a><br />
-            Petit de Chemellier, J.-F. (2019). <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
+            Petit de Chemellier, J.-F. (2019). Professional Translator and Interpreter Training in France: Specificities and Challenges. <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
             <br />https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92
           </p>
         </div>
