--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Jean-François
-  Petit de Chemellier (薛法藍)</title>
+  <title>Jean-François Petit de Chemellier (薛法藍)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,7 +16,7 @@
     .sidebar {
       background-color: #f0f0f0;
       padding: 20px;
-      width: 600px;
+      width: 500px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
@@ -120,8 +119,9 @@
 
   <div class="sidebar">
     <img src="profile-pic.jpg" alt="Profile picture" class="profile-pic" />
-    <h1>Jean-François Petit de Chemellier</h1>
-    <h2>薛法藍</h2>
+    <h1>Jean-François</h1>
+    <h1>Petit de Chemellier</h1>
+    <h1>薛法藍</h1>
     <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
     <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
     <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
