--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .sidebar {
       background-color: #f0f0f0;
       padding: 20px;
-      width: 500px;
+      width: 440px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
@@ -138,31 +138,32 @@
       </p>
     </div>
 
-        <h3>Publications</h3>
-    
-    <div class="publications">
-      <div class="publication-item">
-        <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover" />
-        <div>
-          <p>
-            <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
-              ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
-            </a><br />
-            Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
-          </p>
+    <div class="column">
+      <h3>Publications</h3>
+      <div class="publications">
+        <div class="publication-item">
+          <img src="blc-cover.jpg" alt="Bilingualism: Language and Cognition Cover" class="journal-cover" />
+          <div>
+            <p>
+              <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+                ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
+              </a><br />
+              Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
+            </p>
+          </div>
         </div>
-      </div>
 
-      <div class="publication-item">
-        <img src="sti-cover.jpg" alt="Studies of Interpretation and Translation Cover" class="journal-cover" />
-        <div>
-          <p>
-            <a href="https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92" target="_blank">
-              Professional Translator and Interpreter Training in France: Specificities and Challenges
-            </a><br />
-            Petit de Chemellier, J.-F. (2019). Professional Translator and Interpreter Training in France: Specificities and Challenges. <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
-            <br />https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92
-          </p>
+        <div class="publication-item">
+          <img src="sti-cover.jpg" alt="Studies of Interpretation and Translation Cover" class="journal-cover" />
+          <div>
+            <p>
+              <a href="https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92" target="_blank">
+                Professional Translator and Interpreter Training in France: Specificities and Challenges
+              </a><br />
+              Petit de Chemellier, J.-F. (2019). Professional Translator and Interpreter Training in France: Specificities and Challenges. <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
+              <br />https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92
+            </p>
+          </div>
         </div>
       </div>
     </div>
