--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .sidebar {
       background-color: #f0f0f0;
       padding: 20px;
-      width: 460px;
+      width: 450px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
@@ -132,7 +132,7 @@
 
   <div class="main">
     <div class="column">
-      <h3>Biography</h3>
+      <h3>Short Biography</h3>
       <p>
         Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.
       </p>
