--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       min-height: 100vh;
       background-color: #f9f9f9;
     }
+    
+<img src="brainwaves-pic.jpg" alt="Brainwaves banner" style="width: 100%; height: auto; display: block;" />
 
     .sidebar {
       background-color: #f0f0f0;
@@ -132,7 +134,7 @@
 
   <div class="main">
     <div class="column">
-      <h3>Short Biography</h3>
+      <h3>About me</h3>
       <p>
         Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.
       </p>
