--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="column">
         <h3>About me</h3>
         <p>
-          Jean-François Petit de Chemellier is a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). He holds a PhD in Translation and Interpretation from National Taiwan Normal University. His research interests include linguistic relativity, translation theory, and neurolinguistics.
+          I am a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My research interests include linguistic relativity, translation theory, and neurolinguistics.
         </p>
       </div>
 
