--- a/index.html
+++ b/index.html
@@ -132,19 +132,22 @@
   <!-- Banner image at top -->
   <img src="brainwaves-pic.jpg" alt="Brainwaves banner" class="banner-img" />
 
-  <div class="content">
-    <div class="sidebar">
-      <img src="profile-pic.jpg" alt="Profile picture" class="profile-pic" />
-      <h1>Jean-François</h1>
-      <h1>Petit de Chemellier</h1>
-      <h1>薛法藍</h1>
-      <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
-      <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
-      <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
-        <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
-        ORCID Profile
-      </a>
-    </div>
+<div class="sidebar">
+  <img src="profile-pic.jpg" alt="Profile picture" class="profile-pic" />
+  <h1>Jean-François</h1>
+  <h1>Petit de Chemellier</h1>
+  <h1>薛法藍</h1>
+  <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
+  <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
+  <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
+    <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
+    ORCID Profile
+  </a>
+  <a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
+    Google Scholar
+  </a>
+</div>
 
     <div class="main">
       <div class="column">
