--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="column">
         <h3>About me</h3>
         <p>
-          I am a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My research interests include linguistic relativity, translation theory, and neurolinguistics.
+          I am a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My areas of interest are translation studies and neurolinguistics.
         </p>
       </div>
 
