--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .sidebar {
       background-color: #f0f0f0;
       padding: 20px;
-      width: 460px;
+      width: 300px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
@@ -105,6 +105,7 @@
       gap: 6px;
       text-decoration: none;
       color: #007acc;
+      margin-bottom: 8px;
     }
 
     .orcid-link img {
@@ -132,28 +133,29 @@
   <!-- Banner image at top -->
   <img src="brainwaves-pic.jpg" alt="Brainwaves banner" class="banner-img" />
 
-<div class="sidebar">
-  <img src="profile-pic.jpg" alt="Profile picture" class="profile-pic" />
-  <h1>Jean-François</h1>
-  <h1>Petit de Chemellier</h1>
-  <h1>薛法藍</h1>
-  <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
-  <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
-  <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
-    <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
-    ORCID Profile
-  </a>
-  <a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
-    Google Scholar
-  </a>
-</div>
+  <div class="content">
+    <div class="sidebar">
+      <img src="profile-pic.jpg" alt="Profile picture" class="profile-pic" />
+      <h1>Jean-François</h1>
+      <h1>Petit de Chemellier</h1>
+      <h1>薛法藍</h1>
+      <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
+      <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
+      <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
+        <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
+        ORCID Profile
+      </a>
+      <a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
+        Google Scholar
+      </a>
+    </div>
 
     <div class="main">
       <div class="column">
         <h3>About me</h3>
         <p>
-          I am a freelance Chinese to French translator and teaches translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My areas of interest are translation studies and neurolinguistics.
+          I am a freelance Chinese to French translator and teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My areas of interest are translation studies and neurolinguistics.
         </p>
       </div>
 
@@ -180,7 +182,6 @@
                   Professional Translator and Interpreter Training in France: Specificities and Challenges
                 </a><br />
                 Petit de Chemellier, J.-F. (2019). Professional Translator and Interpreter Training in France: Specificities and Challenges. <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
-                <br />https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92
               </p>
             </div>
           </div>
