--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="column">
         <h3>About me</h3>
         <p>
-          I am a freelance Chinese to French translator and teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My areas of interest are translation studies and neurolinguistics.
+          I am a freelance Chinese to French translator and I teach translation at Tamkang University (Taiwan). I hold a PhD in Translation and Interpretation from National Taiwan Normal University (Taiwan). My areas of interest are translation studies and neurolinguistics.
         </p>
       </div>
 
